tests/errors/missing_return.erbos
foo() int { yell(1) }
spark { yell(foo()) }
